<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
  xmlns:app="http://schemas.android.com/apk/res-auto"
  xmlns:tools="http://schemas.android.com/tools"
  android:layout_width="match_parent"
  android:layout_height="match_parent"
  tools:context=".EnterDetailsActivity">

  <LinearLayout
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical">

    <TextView
      android:layout_width="wrap_content"
      android:layout_height="wrap_content"
      android:layout_marginStart="16dp"
      android:layout_marginTop="16dp"
      android:text="@string/enter_your_details"
      android:textSize="24sp"
      android:textStyle="bold" />

    <EditText
      android:id="@+id/given_name"
      android:layout_width="match_parent"
      android:layout_height="wrap_content"
      android:layout_marginLeft="16dp"
      android:layout_marginTop="8dp"
      android:layout_marginRight="16dp"
      android:hint="@string/given_name"
      android:inputType="textPersonName" />

    <EditText
      android:id="@+id/middle_name"
      android:layout_width="match_parent"
      android:layout_height="wrap_content"
      android:layout_marginLeft="16dp"
      android:layout_marginTop="4dp"
      android:layout_marginRight="16dp"
      android:hint="@string/middle_name"
      android:inputType="textPersonName" />

    <EditText
      android:id="@+id/last_name"
      android:layout_width="match_parent"
      android:layout_height="wrap_content"
      android:layout_marginLeft="16dp"
      android:layout_marginTop="4dp"
      android:layout_marginRight="16dp"
      android:hint="@string/last_name"
      android:inputType="textPersonName" />

    <EditText
      android:id="@+id/phone_number"
      android:layout_width="match_parent"
      android:layout_height="wrap_content"
      android:layout_marginLeft="16dp"
      android:layout_marginTop="4dp"
      android:layout_marginRight="16dp"
      android:hint="@string/phone_number"
      android:inputType="phone" />

    <TextView
      android:layout_width="wrap_content"
      android:layout_height="wrap_content"
      android:layout_marginStart="16dp"
      android:layout_marginTop="16dp"
      android:text="@string/what_is_your_complaint"
      android:textSize="24sp"
      android:textStyle="bold" />

    <EditText
      android:id="@+id/complaint"
      android:layout_width="match_parent"
      android:layout_height="wrap_content"
      android:layout_marginLeft="16dp"
      android:layout_marginTop="8dp"
      android:layout_marginRight="16dp"
      android:inputType="textMultiLine"
      android:lines="4"
      android:maxLines="10"
      android:minLines="1" />

    <TextView
      android:layout_width="wrap_content"
      android:layout_height="wrap_content"
      android:layout_marginStart="16dp"
      android:layout_marginTop="8dp"
      android:text="@string/required"
      android:textSize="16sp"
      android:textStyle="bold" />
  </LinearLayout>

  <Button
    android:id="@+id/submit_button"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_alignParentBottom="true"
    android:background="@color/colorPrimary"
    android:text="@string/submit"
    android:textColor="#ffffff"
    android:textSize="20sp" />

</RelativeLayout>